--- a/.env
+++ b/.env
@@ -2,5 +2,4 @@ PETFINDER_CLIENT_ID = XgCPNJwDy9c4aedC6NO3bR3f7FaZJyjxkWFc7dp4Mcl4wwj2Rs
 PETFINDER_CLIENT_SECRET = sITbiLaXhFikNjnjW8QNJAgBWjMp6C09OksmLDqj
 JWT_SECRET = FELIBO
 JWT_EXPIRY = 1d
-# DATABASE_URL = mongodb+srv://lightsage88:Walruses8@my-first-atlas-db-obkbt.mongodb.net/gdc2?retryWrites=true&w=majority
-DATABASE_URL = mongodb://127.0.0.1:27017/gdc2DB
+DATABASE_URL = mongodb+srv://lightsage88:Walruses8@my-first-atlas-db-obkbt.mongodb.net/gdc2?retryWrites=true&w=majority
