--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "the api for Grab Dat Cat 2.0",
   "main": "server.js",
   "scripts": {
-    "test": "mocha --timeout 5000 --exit",
-    "start": "nodemon server.js"
+    "test": "mocha --timeout 5000 --exit"
   },
   "author": "",
   "license": "ISC",
