--- a/.env
+++ b/.env
@@ -3,4 +3,6 @@ PETFINDER_CLIENT_SECRET = sITbiLaXhFikNjnjW8QNJAgBWjMp6C09OksmLDqj
 JWT_SECRET = FELIBO
 JWT_EXPIRY = 1d
 # DATABASE_URL = mongodb+srv://lightsage88:Walruses8@my-first-atlas-db-obkbt.mongodb.net/gdc2?retryWrites=true&w=majority
-DATABASE_URL = mongodb+srv://lightsage88:<Walruses8>@my-first-atlas-db-obkbt.mongodb.net/<gdc2>?retryWrites=true&w=majority
+DATABASE_URL = mongodb+srv://lightsage88:Walruses8@my-first-atlas-db-obkbt.mongodb.net/gdc2?retryWrites=true&w=majority
+APP_URL = https://localhost:4200
+# APP_URL = https://fast-brushlands-35777.herokuapp.com
