--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "mongod": "^2.0.0",
     "mongoose": "^5.9.23",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
